--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,22 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="app to manipulate text in different ways"
+      content="tool to manipulate text in different ways"
+      content="text utils"
+      content="Text Utils"
+      content="textUtils"
+      content="line counter"
+      content="word counter"
+      content="character counter"
+      content="convert to uppercase"
+      content="convert to lowercase"
+      content="remove extra spaces"
+      content="text utils app create by raju choudhary"
+      content="text utils app create by the-zoomeee"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Text Utils | Line Counter | Word Counter | Character Counter | Convert to Uppercase | Convert to Lowercase | Remove Extra Spaces</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
