TextChef application using react

--- a/public/index.html
+++ b/public/index.html
@@ -3,26 +3,29 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="app to manipulate text in different ways"
       content="tool to manipulate text in different ways"
-      content="text utils"
-      content="Text Utils"
-      content="textUtils"
+      content="TextChef"
+      content="TextChef"
+      content="textchef"
       content="line counter"
       content="word counter"
       content="character counter"
       content="convert to uppercase"
       content="convert to lowercase"
       content="remove extra spaces"
-      content="text utils app create by raju choudhary"
-      content="text utils app create by the-zoomeee"
+      content="TextChef app create by raju choudhary"
+      content="TextChef app create by the-zoomeee"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Text Utils | Line Counter | Word Counter | Character Counter | Convert to Uppercase | Convert to Lowercase | Remove Extra Spaces</title>
+    <title>TextChef | Line Counter | Word Counter | Character Counter | Convert to Uppercase | Convert to Lowercase | Remove Extra Spaces</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
